@startuml stateDiagram
left header
<font size=30 color=black>RobotArm State diagram </font>
endheader
left to right direction

state Startup
Startup : Entry /
Startup : Do / "read configuration"
Startup : Exit /

state Moving
Moving : Entry /
Moving : Do / "moveToPosition(newPosition)"
Moving : Exit/

state Idle
Idle : Entry /
Idle : Do / 
Idle : Exit /

state emergencyStop
emergencyStop : Entry /
emergencyStop : Do /
emergencyStop : Exit /


[*] --> Startup
Startup --> Moving : moveToPark
Moving --> Idle : [currentTime >= timeToMove] idle
Idle --> Moving : move

Startup --> emergencyStop : emergencyStop
Idle --> emergencyStop : emergencyStop
Moving --> emergencyStop : emergencyStop

emergencyStop -> [*]

@enduml

